ops/ingress/staging/gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peerprep-ingress
  namespace: peerprep
  labels:
    app: peerprep
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  tls:
  - secretName: peerprep-secrets
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user
            port: 
              number: 3001
      - path: /question
        pathType: Prefix
        backend:
          service:
            name: question
            port: 
              number: 3002
      - path: /match
        pathType: Prefix
        backend:
          service:
            name: match
            port: 
              number: 3003
      - path: /editor
        pathType: Prefix
        backend:
          service:
            name: editor
            port: 
              number: 3004
      - path: /chat
        pathType: Prefix
        backend:
          service:
            name: chat
            port: 
              number: 3005
      - path: /video-chat
        pathType: Prefix
        backend:
          service:
            name: video-chat
            port: 
              number: 3007
